Slight change to .gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Personal addings
+# Mathis's notes
+notes_SDM_project.txt 
+
 ### JupyterNotebooks ###
 # gitignore template for Jupyter Notebooks
 # website: http://jupyter.org/
